tests/sksl/errors/Ossfuzz58037.glsl
### Compilation failed:

error: 1: array size must be positive
InterfaceBlock { int[] z; } r[0];
                              ^
error: 1: unsized array must be the last member of a storage block
InterfaceBlock { int[] z; } r[0];
                 ^^^^^^^^
2 errors
